<resources>
    <string name="app_name">myHome</string>
    <string name="app_subtitle">...waiting for connection</string>
    <string name="tab_text_1">Overview</string>
    <string name="tab_text_2">Zones</string>
    <string name="tab_text_3">Functions</string>
    <string name="action_settings">Settings</string>
    <string name="action_addnew">Add New Item</string>
    <string name="toast_addnew">you did it! - pushed</string>
    <string name="toast_cfgerr_01">Please set Topic</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textView">mythingy</string>
    <string name="myPopup01">Delete...</string>
    <string name="myPopup02">Edit...</string>
    <string name="myPopup03">Info...</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="mqttaddress">MQTT Server:</string>
    <string name="mqttaddress_hint">tcp://server.com:port</string>

    <!-- ZoneView -->
    <string name="ZoneView_title">Zone</string>

    <!-- Item configuration -->
    <string name="itemconfig_title">Thing configuration</string>

    <string name="itemconfig_topic">Subscribe to:</string>
    <string name="itemconfig_hint_topic">/topic/subtopic</string>
    <string name="itemconfig_itemname">Name</string>
    <string name="itemconfig_hint_itemname">Name/ID</string>
    <string name="itemconfig_itemzone">Zone</string>
    <string name="itemconfig_hint_itemzone">Livingroom</string>
    <string name="itemconfig_itemtype">Type</string>
    <string name="itemconfig_hint_itemtype">Blinds</string>
    <string name="itemconfig_actor">Button</string>
    <string name="mything_publish">Publish to:</string>
    <string name="mything_publishinput">/topic/subtopic</string>

    <string name="title_activity_settings">Settings</string>

    <string name="Typelist_01">Lamp</string>
    <string name="Typelist_02">Temperature</string>
    <string name="Typelist_03">Blinds</string>
    <string name="Typelist_04">Socket</string>
    <string name="Typelist_05">Valve</string>
    <string name="Typelist_06">Humidity</string>

    <string name="Zonelist_01">Livingroom</string>
    <string name="Zonelist_02">Bedroom</string>
    <string name="Zonelist_03">Kitchen</string>
    <string name="Zonelist_04">Garage</string>
    <string name="Zonelist_05">Garden</string>

    <string-array name="Typelist">
        <item>@string/Typelist_01</item>
        <item>@string/Typelist_03</item>
        <item>@string/Typelist_04</item>
        <item>@string/Typelist_05</item>
        <item>@string/Typelist_02</item>
        <item>@string/Typelist_06</item>
    </string-array>

    <string-array name="Typelist_actor">
        <item>@string/Typelist_01</item>
        <item>@string/Typelist_03</item>
        <item>@string/Typelist_04</item>
        <item>@string/Typelist_05</item>
    </string-array>

    <string-array name="Zonelist">
        <item>@string/Zonelist_01</item>
        <item>@string/Zonelist_02</item>
        <item>@string/Zonelist_03</item>
        <item>@string/Zonelist_04</item>
        <item>@string/Zonelist_05</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
